[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
rstest = "0.18.2"
